--- a/main.css
+++ b/main.css
@@ -3,6 +3,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+body{
+    background-color: bisque;
+}
 /* .boy{
     position: fixed;
     top:0;
@@ -218,14 +221,14 @@
     display: flex;
     width: 100%;
     margin-top: 80px;
-    position: relative;
+    /* position: relative; */
   }
 
  ::-webkit-scrollbar-thumb{
    
   }
   .left-side{
-    float:left;
+    /* float:left; */
     width:15%;
   margin-top: 10px;
     height: 100vh;
