--- a/main.css
+++ b/main.css
@@ -224,17 +224,33 @@ body{
     margin-top: 80px;
     /* position: relative; */
   }
-
- ::-webkit-scrollbar-thumb{
-   
+  .side::-webkit-scrollbar-thumb {
+    background: #6a1818;
+    border-radius: 10px;
   }
-  .left-side{
+  .side::-webkit-scrollbar-track {
+   background-color: white;
+    box-shadow: inset 0 0 5px grey; 
+    border-radius: 10px;
+  }
+  .side::-webkit-scrollbar {
+    width: 10px;
+  }
+  .side{
     /* float:left; */
-    width:15%;
+    /* width:15%; */
   margin-top: 10px;
+  padding: 30px;
     height: 100vh;
 overflow-y:scroll; 
  
+  }
+  .body::-webkit-scrollbar {
+    width: 20px;
+  }
+  .body{
+    overflow-y:scroll; 
+    /* padding: 10px; */
   }
   /* .left-side::-webkit-scrollbar{
     width:15px;
