--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 body{
-    background-color:white;
+    background-color:rgb(202, 25, 25);
 }
 /* .boy{
     position: fixed;
