--- a/main.css
+++ b/main.css
@@ -195,7 +195,7 @@ body{
   }
   .iconss:hover{
     background-color: rgba(172, 169, 167, 0.802);
-    width:80%;
+    width:100%;
     border-radius: 9px;
   }
   .icony{
@@ -219,28 +219,28 @@ body{
   }
   .content{
     display: flex;
-    gap:px;
+    gap:40px;
     width: 100%;
     margin-top: 80px;
     /* position: relative; */
   }
-  .side::-webkit-scrollbar-thumb {
+  .left-side::-webkit-scrollbar-thumb {
     background: #6a1818;
     border-radius: 10px;
   }
-  .side::-webkit-scrollbar-track {
+  .left-side::-webkit-scrollbar-track {
    background-color: white;
     box-shadow: inset 0 0 5px grey; 
     border-radius: 10px;
   }
-  .side::-webkit-scrollbar {
+  .left-side::-webkit-scrollbar {
     width: 10px;
   }
-  .side{
+  .left-side{
     /* float:left; */
-    /* width:15%; */
+    /* width:45%; */
   margin-top: 10px;
-  padding: 30px;
+  padding-right: 20px;
     height: 100vh;
 overflow-y:scroll; 
  
@@ -248,10 +248,10 @@ overflow-y:scroll;
   .body::-webkit-scrollbar {
     width: 20px;
   }
-  .body{
+  /* .body{
     overflow-y:scroll; 
-    /* padding: 10px; */
-  }
+   
+  } */
   /* .left-side::-webkit-scrollbar{
     width:15px;
   } */
@@ -298,8 +298,8 @@ hr{
   }
   .bound{
     display: grid;
-    justify-content: space-around;
-    grid-template-columns: repeat(4,390px);
+    /* justify-content: space-around; */
+    grid-template-columns: repeat(4,360px);
     gap:40px;
   }
   .main-img{
