--- a/main.css
+++ b/main.css
@@ -187,9 +187,9 @@ body{
   } */
   .iconss{
     display: flex;
-    gap:20px;
+    gap:30px;
     
-    padding: 7px;
+    padding: 8px;
     margin-bottom: 20px;
     align-items: center;
   }
@@ -224,23 +224,23 @@ body{
     margin-top: 80px;
     /* position: relative; */
   }
-  .left-side::-webkit-scrollbar-thumb {
+  .side::-webkit-scrollbar-thumb {
     background: #6a1818;
     border-radius: 10px;
   }
-  .left-side::-webkit-scrollbar-track {
+  .side::-webkit-scrollbar-track {
    background-color: white;
     box-shadow: inset 0 0 5px grey; 
     border-radius: 10px;
   }
-  .left-side::-webkit-scrollbar {
+  .side::-webkit-scrollbar {
     width: 10px;
   }
-  .left-side{
+  .side{
     /* float:left; */
-    /* width:45%; */
+    width:105%;
   margin-top: 10px;
-  padding-right: 20px;
+  padding: 20px;
     height: 100vh;
 overflow-y:scroll; 
  
@@ -252,7 +252,7 @@ overflow-y:scroll;
     overflow-y:scroll; 
    
   } */
-  /* .left-side::-webkit-scrollbar{
+  /* .side::-webkit-scrollbar{
     width:15px;
   } */
 hr{
