--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 body{
-    background-color:rgb(202, 25, 25);
+    background-color:white;
 }
 /* .boy{
     position: fixed;
@@ -240,7 +240,7 @@ body{
     /* float:left; */
     width:105%;
   margin-top: 10px;
-  padding: 20px;
+  padding: 10px;
     height: 100vh;
 overflow-y:scroll; 
  
@@ -299,7 +299,7 @@ hr{
   .bound{
     display: grid;
     /* justify-content: space-around; */
-    grid-template-columns: repeat(4,310px);
+    grid-template-columns: repeat(4,340px);
     gap:40px;
   }
   .main-img{
