--- a/main.css
+++ b/main.css
@@ -303,8 +303,8 @@ hr{
     gap:40px;
   }
   .main-img{
-    width:22rem;
-    height: 23vh;
+    width:100%;
+    height: 21vh;
     cursor: pointer;
     border-radius: 20px;
   }
@@ -331,7 +331,7 @@ hr{
    /* gap: 40px; */
   }
   .title{
-    font-size: 23px;
+    font-size: 20px;
   }
   .circle{
     padding: 2px;
