--- a/main.css
+++ b/main.css
@@ -240,7 +240,7 @@ body{
     /* float:left; */
     /* width:105%; */
   margin-top: 10px;
-  /* padding: 10px; */
+  padding: 10px;
     height: 100vh;
 overflow-y:scroll; 
  
@@ -297,17 +297,27 @@ hr{
     justify-content: center;
   }
   .content{
+    display: flex;
+    /* justify-content: space-evenly; */
     cursor: pointer;
   }
   .bound{
     display: grid;
+    /* width:100%; */
+    border: 1px solid red;
     /* justify-content: space-around; */
-    grid-template-columns: repeat(4,300px);
-    /* gap:30px; */
+    grid-template-columns: repeat(4,320px);
+    /* grid-template-columns: repeat(auto-fit, min-max(1fr,400px)); */
+    gap:6rem;
+  }
+  .content-t{
+    width:24rem;
+    height:24vh;
+    border:1px solid red;
   }
   .main-img{
-    width:18rem;
-    height: 16vh;
+    width:23rem;
+    height: 24vh;
     cursor: pointer;
     border-radius: 10px;
   }
@@ -396,3 +406,133 @@ hr{
         margin-top: 70px;
       } */
   }
+
+
+
+
+  /* .iconss{
+    display: flex;
+    gap:30px;
+    
+    padding: 8px;
+    margin-bottom: 20px;
+    align-items: center;
+  }
+  .iconss:hover{
+    background-color: rgba(172, 169, 167, 0.802);
+    width:100%;
+    border-radius: 9px;
+  }
+  .icony{
+    font-size: 26px;
+  }
+  .icon-title{
+    font-size: 16px;
+    
+  }
+  .subscribe{
+    margin-top: 20px;
+    font-size: 22px;
+  }
+  .profile1{
+    width:30px;
+    height:30px;
+    border-radius: 999px;
+  }
+  .sub-title{
+    font-size: 18px;
+  }
+  .content{
+    display: flex;
+    gap:40px;
+    /* width: 100%; */
+    /* margin-top: 80px; */
+    /* position: relative; */
+  /* } */
+  /* .side::-webkit-scrollbar-thumb {
+    background: #6a1818;
+    border-radius: 10px;
+  }
+  .side::-webkit-scrollbar-track {
+   background-color: white;
+    box-shadow: inset 0 0 5px grey; 
+    border-radius: 10px;
+  }
+  .side::-webkit-scrollbar {
+    width: 10px;
+  }
+  .side{
+    /* float:left; */
+    /* width:105%; */
+  /* margin-top: 10px; */
+  /* padding: 10px; */
+    /* height: 100vh; */
+/* overflow-y:scroll;  */
+ 
+  /* }  */ */
+  /* .scroll-btn::-webkit-scrollbar {
+    width: 10px;
+  } */
+  /* .body{
+    overflow-y:scroll; 
+   
+  } */
+  /* .side::-webkit-scrollbar{
+    width:15px;
+  } */
+hr{
+   margin-left: 14px;
+   margin-right: 18px;
+}
+  /* .first-step{
+    display: grid;
+    margin-left: 20px; */
+    /* justify-content: center; */
+  /* }
+  .scroll-btn{
+    display: flex;
+    position: fixed;
+    width:80%; */
+    /* height:100vh; */
+    /* z-index: 1px;
+    background-color: white; */
+    /* padding-bottom: 20px; */
+   /* margin-top: 20px; */
+    /* right:0; */
+   /* gap:10px;
+   overflow-x:scroll;
+  } */
+  /* .scr-btn{
+    padding:10px;
+    
+    border-radius: 7px;
+    border: none;
+    font-size: 14px;
+   
+  } */
+  /* .active{
+    background-color: black;
+    color:white;
+  } */
+  /* body */
+  /* .body{
+    margin-top: 90px;
+    margin-left: 25px;
+    /* display: flex; */
+    /* justify-content: center;
+  } */
+  /* .content{
+    cursor: pointer;
+  } */
+  /* .bound{
+    display: grid; */
+    /* justify-content: space-around; */
+    /* grid-template-columns: repeat(4,300px); */
+    /* gap:30px; */
+  /* } */
+  /* .main-img{
+    width:18rem;
+    height: 16vh;
+    cursor: pointer;
+    border-radius: 10px;
+  } */ 
