--- a/main.css
+++ b/main.css
@@ -185,14 +185,7 @@ body{
  /* .fa{
     font-size: 60px;
   } */
-  .iconss{
-    display: flex;
-    gap:30px;
-    
-    padding: 8px;
-    margin-bottom: 20px;
-    align-items: center;
-  }
+  
   .iconss:hover{
     background-color: rgba(172, 169, 167, 0.802);
     width:100%;
@@ -217,14 +210,14 @@ body{
   .sub-title{
     font-size: 18px;
   }
-  .content{
+  /* .content{
     display: flex;
-    gap:40px;
+    gap:40px; */
     /* width: 100%; */
-    margin-top: 80px;
+    /* margin-top: 80px; */
     /* position: relative; */
-  }
-  .side::-webkit-scrollbar-thumb {
+  /* } */
+  /* .side::-webkit-scrollbar-thumb {
     background: #6a1818;
     border-radius: 10px;
   }
@@ -237,14 +230,13 @@ body{
     width: 10px;
   }
   .side{
-    /* float:left; */
-    /* width:105%; */
+   
   margin-top: 10px;
   padding: 10px;
     height: 100vh;
 overflow-y:scroll; 
  
-  }
+  } */
   /* .scroll-btn::-webkit-scrollbar {
     width: 10px;
   } */
@@ -298,12 +290,36 @@ hr{
   }
   .content{
     display: flex;
-    /* justify-content: space-evenly; */
+    position: relative;
+    width:100%;
+    top:90px;
+    
     cursor: pointer;
   }
+  .iconss{
+    display: block;
+    display: flex;
+    padding: 8px;
+    box-sizing: border-box;
+    gap:30px;
+    /* gap:30px;
+    bo
+    
+    margin-bottom: 20px; */
+    align-items: center;
+  }
+.left-side{
+  float: left;
+  width:15%;
+  height:100vh;
+  overflow-y: scroll;
+  box-sizing: border-box;
+}
+
+
   .bound{
     display: grid;
-    grid-template-columns: repeat(4,290px);
+    grid-template-columns: repeat(4,300px);
     /* width:100%; */
     border: 1px solid red;
     /* justify-content: space-around; */
@@ -312,13 +328,13 @@ hr{
     gap:6rem;
   }
   .content-t{
-    width:24rem;
+    width:18rem;
     height:24vh;
     border:1px solid red;
   }
   .main-img{
-    width:23rem;
-    height: 24vh;
+    width:22rem;
+    height: 19vh;
     cursor: pointer;
     border-radius: 10px;
   }
