--- a/main.css
+++ b/main.css
@@ -5,6 +5,7 @@
 }
 body{
     background-color:white;
+    overflow: hidden;
 }
 /* .boy{
     position: fixed;
@@ -256,38 +257,14 @@ hr{
     margin-left: 20px;
     /* justify-content: center; */
   }
-  .scroll-btn{
-    display: flex;
-    position: fixed;
-    width:80%;
-    /* height:100vh; */
-    z-index: 1px;
-    background-color: white;
-    /* padding-bottom: 20px; */
-   /* margin-top: 20px; */
-    /* right:0; */
-   gap:10px;
-   overflow-x:scroll;
-  }
-  .scr-btn{
-    padding:10px;
-    
-    border-radius: 7px;
-    border: none;
-    font-size: 14px;
-   
-  }
+ 
+  
   .active{
     background-color: black;
     color:white;
   }
   /* body */
-  .body{
-    margin-top: 90px;
-    margin-left: 25px;
-    /* display: flex; */
-    justify-content: center;
-  }
+
   .content{
     display: flex;
     position: relative;
@@ -315,8 +292,40 @@ hr{
   overflow-y: scroll;
   box-sizing: border-box;
 }
-
-
+.center{
+  width:90%;
+  height:100vh;
+  padding: 30px;
+  box-sizing: border-box;
+  overflow: scroll;
+}
+.scroll-btn{
+  display: flex;
+  position: fixed;
+  max-width:100%;
+  height:70px;
+  
+  padding: 10px;
+  justify-content: flex-start;
+  z-index:1;
+  background-color:white;
+top:80px;
+ overflow-x:scroll;
+}
+.scr-btn{
+  padding:10px;
+  box-sizing: border-box;
+  width:100%;
+  border-radius: 7px;
+  border: none;
+  font-size: 14px;
+ 
+}
+.card{
+ height: auto;
+ width: 100%;
+ box-sizing: border-box;
+}
   .bound{
     /* display: grid;
     grid-template-columns: repeat(4,300px); */
