--- a/main.css
+++ b/main.css
@@ -323,29 +323,31 @@ top:80px;
 }
 .card{
  height: auto;
- width: 100%;
+ width: ;
  box-sizing: border-box;
 }
   .bound{
-    /* display: grid;
-    grid-template-columns: repeat(4,300px); */
-    /* width:100%; */
     border: 1px solid red;
-    /* justify-content: space-around; */
-    /* grid-template-columns: repeat(4,320px); */
+  display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     /* grid-template-columns: repeat(auto-fit, min-max(1fr,400px)); */
-    gap:6rem;
+   margin-top: 90px;
+   
   }
   .content-t{
-    width:18rem;
-    height:24vh;
-    border:1px solid red;
+   margin: 20px;
+  }
+  .main-card{
+    min-width: 230px;
+    height: 170px;
   }
   .main-img{
-    width:14rem;
-    height: 19vh;
+    width:100%;
+    height: 100%;
+    object-fit: cover;
     cursor: pointer;
     border-radius: 10px;
+    
   }
   .main-img:hover{
     border-radius: 0px;
