--- a/main.css
+++ b/main.css
@@ -323,7 +323,7 @@ top:80px;
 }
 .card{
  height: auto;
- width: ;
+ width: 100%;
  box-sizing: border-box;
 }
   .bound{
@@ -342,8 +342,8 @@ top:80px;
     height: 170px;
   }
   .main-img{
-    width:100%;
-    height: 100%;
+    width:25rem;
+    height: 22vh;
     object-fit: cover;
     cursor: pointer;
     border-radius: 10px;
