--- a/main.css
+++ b/main.css
@@ -211,43 +211,7 @@ body{
   .sub-title{
     font-size: 18px;
   }
-  /* .content{
-    display: flex;
-    gap:40px; */
-    /* width: 100%; */
-    /* margin-top: 80px; */
-    /* position: relative; */
-  /* } */
-  /* .side::-webkit-scrollbar-thumb {
-    background: #6a1818;
-    border-radius: 10px;
-  }
-  .side::-webkit-scrollbar-track {
-   background-color: white;
-    box-shadow: inset 0 0 5px grey; 
-    border-radius: 10px;
-  }
-  .side::-webkit-scrollbar {
-    width: 10px;
-  }
-  .side{
-   
-  margin-top: 10px;
-  padding: 10px;
-    height: 100vh;
-overflow-y:scroll; 
- 
-  } */
-  /* .scroll-btn::-webkit-scrollbar {
-    width: 10px;
-  } */
-  /* .body{
-    overflow-y:scroll; 
-   
-  } */
-  /* .side::-webkit-scrollbar{
-    width:15px;
-  } */
+  
 hr{
    margin-left: 14px;
    margin-right: 18px;
@@ -312,6 +276,9 @@ hr{
 top:80px;
  overflow-x:scroll;
 }
+.scroll-btn::-webkit-scrollbar {
+  display: none;
+}
 .scr-btn{
   padding:10px;
   box-sizing: border-box;
@@ -327,7 +294,7 @@ top:80px;
  box-sizing: border-box;
 }
   .bound{
-    border: 1px solid red;
+    
   display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     /* grid-template-columns: repeat(auto-fit, min-max(1fr,400px)); */
@@ -416,12 +383,15 @@ top:80px;
     } */
     .bound{
        display: grid;
-       grid-template-columns: repeat(1,420px);
+       grid-template-columns: 1fr;
        gap:10px;
       }
+      .left-side{
+        display: none;
+      }
       .main-img1{
-        width:10rem;
-        height: 30vh;
+        /* width:10rem;
+        height: 30vh; */
       }
       .short{
         display: flex;
