--- a/main.css
+++ b/main.css
@@ -381,14 +381,11 @@ top:80px;
     /* body{
         background-color: green;
     } */
-    .header{
-      justify-content: ;
-    }
+ 
     .main-img{
       width:120%;
       height: 20vh;
-      object-fit: cover;
-      border-radius: 20px;
+    
     }
     .main-img1{
       width:10rem;
@@ -426,6 +423,7 @@ top:80px;
     }
     .bound{
        display: grid;
+       justify-content: center;
        grid-template-columns: 1fr;
        gap:10px;
       }
