--- a/main.css
+++ b/main.css
@@ -1,11 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Roboto+Mono:wght@400;500;700&display=swap');
+
 *{
     margin: 0;
     padding: 0;
+
     box-sizing: border-box;
 }
 body{
     background-color:white;
     color: black;
+    font-family: 'Lato', sans-serif;
+/* font-family: 'Roboto Mono', monospace; */
 }
 /* .boy{
     position: fixed;
