--- a/main.css
+++ b/main.css
@@ -179,15 +179,17 @@ body{
     color:black;
    
 }
-
+/* span{
+  font-size: 70px;
+} */
 .material-symbols-outlined {
-    font-variation-settings:
-    'FILL' 0,
-    'wght' 400,
-    'GRAD' 0,
-    'opsz' 24
-     
-  }
+  font-size: 25px;
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24
+}
  /* .fa{
     font-size: 60px;
   } */
@@ -399,7 +401,8 @@ top:80px;
     } */
  
     .main-img{
-      width:110%;
+      width:100%;
+      
       height: 20vh;
     
     }
@@ -434,9 +437,9 @@ top:80px;
     top:80px;
      overflow-x:scroll; */
     }
-    .center::-webkit-scrollbar {
+    /* .center::-webkit-scrollbar {
       display: none;
-    }
+    } */
     .short::-webkit-scrollbar {
       display: none;
     }
