--- a/main.css
+++ b/main.css
@@ -258,6 +258,7 @@ hr{
   }
 .left-side{
   float: left;
+  color: rgb(42, 41, 41);
   width:15%;
   height:100vh;
   overflow-y: scroll;
@@ -401,7 +402,7 @@ top:80px;
     } */
  
     .main-img{
-      width:100%;
+      width:110%;
       
       height: 20vh;
     
@@ -443,6 +444,13 @@ top:80px;
     .short::-webkit-scrollbar {
       display: none;
     }
+    .center{
+      width:100%;
+      /* height:100vh;
+      padding: 30px;
+      box-sizing: border-box;
+      overflow: scroll; */
+    }
     .bound{
        display: grid;
        justify-content: center;
@@ -452,10 +460,10 @@ top:80px;
       .left-side{
         display: none;
       }
-      .main-img1{
-        /* width:10rem;
-        height: 30vh; */
-      }
+      /* .main-img1{
+        width:10rem;
+        height: 30vh;
+      } */
       .short{
         display: flex;
         margin-bottom: 30px;
