--- a/main.css
+++ b/main.css
@@ -179,9 +179,7 @@ body{
     color:black;
    
 }
-/* span{
-  font-size: 70px;
-} */
+
 .material-symbols-outlined {
   font-size: 25px;
   font-variation-settings:
@@ -190,9 +188,7 @@ body{
   'GRAD' 0,
   'opsz' 24
 }
- /* .fa{
-    font-size: 60px;
-  } */
+
   
   .iconss:hover{
     background-color: rgba(172, 169, 167, 0.802);
@@ -392,14 +388,13 @@ top:80px;
     cursor: pointer;
     gap:20px;
 }
-
+.side{
+  /* display: none; */
+}
 
   /* MOBILE VIEW */
   @media screen and (max-width:480px) {
-    /* body{
-      overflow: hidden;
-       
-    } */
+  
  
     .main-img{
       width:110%;
@@ -427,8 +422,8 @@ top:80px;
       display: none;
     }
     .scroll-btn{
-      justify-content: flex-end;
-      max-width:90%;
+      /* justify-content: flex-end; */
+      max-width:89%;
       /* height:70px;
       
       padding: 10px;
@@ -438,9 +433,10 @@ top:80px;
     top:80px;
      overflow-x:scroll; */
     }
-    /* .center::-webkit-scrollbar {
+    .center::-webkit-scrollbar  {
       display: none;
-    } */
+      width:4px;
+    }
     .short::-webkit-scrollbar {
       display: none;
     }
@@ -452,11 +448,16 @@ top:80px;
       overflow: scroll; */
     }
     .bound{
+     
        display: grid;
+       /* row-gap: 50px; */
        justify-content: center;
        grid-template-columns: 1fr;
-       /* gap:10px; */
+     
       }
+      .content-t{
+        margin-top: 30px;
+       }
       .left-side{
         display: none;
       }
